ux and video formats

--- a/css/style.css
+++ b/css/style.css
@@ -581,11 +581,10 @@ ul {
 	background: #e6e6e6;
 	padding: 1.6em 0;
 	text-align: center;
-	width: 100%;
+	max-width: 100%;
 }
 
 .imagesWrapper img {
-	/*margin: .6em;*/
 	margin-bottom: .6em;
 	max-width: 100%;
 }
@@ -731,7 +730,7 @@ ul {
 	}
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 1200px) {
 	h1 {
 		font-size: 2.5em;
 	}
